; ModuleID = '/home/carl/AnghaBench/linux/drivers/slimbus/extr_stream.c_slim_stream_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/slimbus/extr_stream.c_slim_stream_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.slim_stream_runtime = type { %struct.slim_stream_runtime*, i32, %struct.slim_device* }
%struct.slim_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @slim_stream_free(%struct.slim_stream_runtime* %0) #0 {
  %2 = alloca %struct.slim_stream_runtime*, align 8
  %3 = alloca %struct.slim_device*, align 8
  store %struct.slim_stream_runtime* %0, %struct.slim_stream_runtime** %2, align 8
  %4 = load %struct.slim_stream_runtime*, %struct.slim_stream_runtime** %2, align 8
  %5 = getelementptr inbounds %struct.slim_stream_runtime, %struct.slim_stream_runtime* %4, i32 0, i32 2
  %6 = load %struct.slim_device*, %struct.slim_device** %5, align 8
  store %struct.slim_device* %6, %struct.slim_device** %3, align 8
  %7 = load %struct.slim_device*, %struct.slim_device** %3, align 8
  %8 = getelementptr inbounds %struct.slim_device, %struct.slim_device* %7, i32 0, i32 0
  %9 = call i32 @spin_lock(i32* %8)
  %10 = load %struct.slim_stream_runtime*, %struct.slim_stream_runtime** %2, align 8
  %11 = getelementptr inbounds %struct.slim_stream_runtime, %struct.slim_stream_runtime* %10, i32 0, i32 1
  %12 = call i32 @list_del(i32* %11)
  %13 = load %struct.slim_device*, %struct.slim_device** %3, align 8
  %14 = getelementptr inbounds %struct.slim_device, %struct.slim_device* %13, i32 0, i32 0
  %15 = call i32 @spin_unlock(i32* %14)
  %16 = load %struct.slim_stream_runtime*, %struct.slim_stream_runtime** %2, align 8
  %17 = getelementptr inbounds %struct.slim_stream_runtime, %struct.slim_stream_runtime* %16, i32 0, i32 0
  %18 = load %struct.slim_stream_runtime*, %struct.slim_stream_runtime** %17, align 8
  %19 = call i32 @kfree(%struct.slim_stream_runtime* %18)
  %20 = load %struct.slim_stream_runtime*, %struct.slim_stream_runtime** %2, align 8
  %21 = call i32 @kfree(%struct.slim_stream_runtime* %20)
  ret i32 0
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @kfree(%struct.slim_stream_runtime*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
